--- a/src/app/modules/play-table/css/players-positions.css
+++ b/src/app/modules/play-table/css/players-positions.css
@@ -61,8 +61,8 @@
   bottom: 26%;
   left: 29%;
 }
-#p0 .btn_name_appointee-img, #p0 .btn_name_player-img, #p1 .btn_name_appointee-img, #p1 .btn_name_player-img,
-#p2 .btn_name_appointee-img, #p2 .btn_name_player-img, #p3 .btn_name_appointee-img, #p3 .btn_name_player-img{
+#p0 .btn_name_appointee-img, #p0 .btn_name_player-img, #p0 .btn_name_selected-img, #p1 .btn_name_appointee-img, #p1 .btn_name_player-img, #p1 .btn_name_selected-img,
+#p2 .btn_name_appointee-img, #p2 .btn_name_player-img, #p2 .btn_name_selected-img, #p3 .btn_name_appointee-img, #p3 .btn_name_player-img, #p3 .btn_name_selected-img{
   top: 10%;
 }
 #p0 .text-over-btn, #p1 .text-over-btn, #p2 .text-over-btn, #p3 .text-over-btn{
@@ -88,7 +88,7 @@
   width: 23%;
   height: 68%;
 }
-#p4 .btn_name_appointee-img, #p4 .btn_name_player-img{
+#p4 .btn_name_appointee-img, #p4 .btn_name_player-img, #p4 .btn_name_selected-img {
   width: 53%;
   height: 40%;
   top: 0;
@@ -123,8 +123,8 @@
   top: 0;
   left: 29%;
 }
-#p5 .btn_name_appointee-img, #p5 .btn_name_player-img, #p6 .btn_name_appointee-img, #p6 .btn_name_player-img,
-#p7 .btn_name_appointee-img, #p7 .btn_name_player-img, #p8 .btn_name_appointee-img, #p8 .btn_name_player-img{
+#p5 .btn_name_appointee-img, #p5 .btn_name_player-img, #p5 .btn_name_selected-img, #p6 .btn_name_appointee-img, #p6 .btn_name_player-img, #p6 .btn_name_selected-img,
+#p7 .btn_name_appointee-img, #p7 .btn_name_player-img, #p7 .btn_name_selected-img, #p8 .btn_name_appointee-img, #p8 .btn_name_player-img, #p8 .btn_name_selected-img{
   top: 54%;
 }
 #p5 .text-over-btn, #p6 .text-over-btn, #p7 .text-over-btn, #p8 .text-over-btn{
@@ -149,7 +149,7 @@
   width: 23%;
   height: 68%;
 }
-#p9 .btn_name_appointee-img, #p9 .btn_name_player-img{
+#p9 .btn_name_appointee-img, #p9 .btn_name_player-img, #p0 .btn_name_selected-img {
   width: 53%;
   height: 40%;
   top: 0;
