separate game class

--- a/src/app/modules/play-table/play-table.component.html
+++ b/src/app/modules/play-table/play-table.component.html
@@ -92,39 +92,39 @@
 
     <div id="banker">
       <div class="card-0">
-        <img [src]="banker.card_0.srcImg" [class]="banker.card_0.cssClass"  [id]="banker.card_0.cssId"
-             (mouseover)="playersBlock.selectCard(banker.card_0, 'over')"
-             (mousedown)="playersBlock.selectCard(banker.card_0, 'down')"
-             (mouseleave)="playersBlock.selectCard(banker.card_0, 'leave')"
-             (mouseup)="playersBlock.selectCard(banker.card_0, 'up')">
+        <img [src]="game.banker.card_0.srcImg" [class]="game.banker.card_0.cssClass"  [id]="game.banker.card_0.cssId"
+             (mouseover)="playersBlock.selectCard(game.banker.card_0, 'over')"
+             (mousedown)="playersBlock.selectCard(game.banker.card_0, 'down')"
+             (mouseleave)="playersBlock.selectCard(game.banker.card_0, 'leave')"
+             (mouseup)="playersBlock.selectCard(game.banker.card_0, 'up')">
       </div>
       <div class="card-1">
-        <img [src]="banker.card_1.srcImg" [class]="banker.card_1.cssClass"  [id]="banker.card_1.cssId"
-             (mouseover)="playersBlock.selectCard(banker.card_1, 'over')"
-             (mousedown)="playersBlock.selectCard(banker.card_1, 'down')"
-             (mouseleave)="playersBlock.selectCard(banker.card_1, 'leave')"
-             (mouseup)="playersBlock.selectCard(banker.card_1, 'up')">
+        <img [src]="game.banker.card_1.srcImg" [class]="game.banker.card_1.cssClass"  [id]="game.banker.card_1.cssId"
+             (mouseover)="playersBlock.selectCard(game.banker.card_1, 'over')"
+             (mousedown)="playersBlock.selectCard(game.banker.card_1, 'down')"
+             (mouseleave)="playersBlock.selectCard(game.banker.card_1, 'leave')"
+             (mouseup)="playersBlock.selectCard(game.banker.card_1, 'up')">
       </div>
       <div class="card-2">
-        <img [src]="banker.card_2.srcImg" [class]="banker.card_2.cssClass"  [id]="banker.card_2.cssId"
-             (mouseover)="playersBlock.selectCard(banker.card_2, 'over')"
-             (mousedown)="playersBlock.selectCard(banker.card_2, 'down')"
-             (mouseleave)="playersBlock.selectCard(banker.card_2, 'leave')"
-             (mouseup)="playersBlock.selectCard(banker.card_2, 'up')">
+        <img [src]="game.banker.card_2.srcImg" [class]="game.banker.card_2.cssClass"  [id]="game.banker.card_2.cssId"
+             (mouseover)="playersBlock.selectCard(game.banker.card_2, 'over')"
+             (mousedown)="playersBlock.selectCard(game.banker.card_2, 'down')"
+             (mouseleave)="playersBlock.selectCard(game.banker.card_2, 'leave')"
+             (mouseup)="playersBlock.selectCard(game.banker.card_2, 'up')">
       </div>
       <div class="card-3">
-        <img [src]="banker.card_3.srcImg" [class]="banker.card_3.cssClass"  [id]="banker.card_3.cssId"
-             (mouseover)="playersBlock.selectCard(banker.card_3, 'over')"
-             (mousedown)="playersBlock.selectCard(banker.card_3, 'down')"
-             (mouseleave)="playersBlock.selectCard(banker.card_3, 'leave')"
-             (mouseup)="playersBlock.selectCard(banker.card_3, 'up')">
+        <img [src]="game.banker.card_3.srcImg" [class]="game.banker.card_3.cssClass"  [id]="game.banker.card_3.cssId"
+             (mouseover)="playersBlock.selectCard(game.banker.card_3, 'over')"
+             (mousedown)="playersBlock.selectCard(game.banker.card_3, 'down')"
+             (mouseleave)="playersBlock.selectCard(game.banker.card_3, 'leave')"
+             (mouseup)="playersBlock.selectCard(game.banker.card_3, 'up')">
       </div>
       <div class="card-4">
-        <img [src]="banker.card_4.srcImg" [class]="banker.card_4.cssClass"  [id]="banker.card_4.cssId"
-             (mouseover)="playersBlock.selectCard(banker.card_4, 'over')"
-             (mousedown)="playersBlock.selectCard(banker.card_4, 'down')"
-             (mouseleave)="playersBlock.selectCard(banker.card_4, 'leave')"
-             (mouseup)="playersBlock.selectCard(banker.card_4, 'up')">
+        <img [src]="game.banker.card_4.srcImg" [class]="game.banker.card_4.cssClass"  [id]="game.banker.card_4.cssId"
+             (mouseover)="playersBlock.selectCard(game.banker.card_4, 'over')"
+             (mousedown)="playersBlock.selectCard(game.banker.card_4, 'down')"
+             (mouseleave)="playersBlock.selectCard(game.banker.card_4, 'leave')"
+             (mouseup)="playersBlock.selectCard(game.banker.card_4, 'up')">
       </div>
     </div>
     <div *ngIf="panelBlock.displayInitialPanel" id="initialPanel">
