--- a/src/app/modules/play-table/css/buttons.css
+++ b/src/app/modules/play-table/css/buttons.css
@@ -45,7 +45,7 @@
   height: 32%;
   position: absolute;
 }
-.btn_name_appointee-img, .btn_name_player-img, .btn_name_selected-img{
+.btn_name_appointee-img, .btn_name_player-img, .btn_name_selected-img, .btn_name_blocked-img{
   width: 100%;
   height: 20%;
   position: absolute;
