--- a/src/app/modules/play-table/play-table.component.html
+++ b/src/app/modules/play-table/play-table.component.html
@@ -20,7 +20,7 @@
              (mouseup)="playersBlock.b_Position.onUp($event, player)">
       </div>
 
-      <div *ngIf="!player.empty && player.isAppointee && !player.isSelected">
+      <div *ngIf="!player.empty && player.isAppointee && !player.isSelected && player.isActive">
         <img [src]="playersBlock.b_Name_appointee.srcNone" [class]="playersBlock.b_Name_appointee.cssClass"
              (mouseover)="playersBlock.b_Name_appointee.onOver($event)"
              (mousedown)="playersBlock.b_Name_appointee.onDown($event)"
@@ -30,7 +30,7 @@
         <img src="../../../assets/img/panel_balance_appointee.png" class="panel-balance-img">
         <p class="text-balance">{{player.balance}}</p>
       </div>
-      <div *ngIf="!player.empty && !player.isAppointee && !player.isSelected">
+      <div *ngIf="!player.empty && !player.isAppointee && !player.isSelected && player.isActive">
         <div>
           <img [src]="playersBlock.b_Name_player.srcNone" [class]="playersBlock.b_Name_player.cssClass"
                (mouseover)="playersBlock.b_Name_player.onOver($event)"
@@ -44,7 +44,7 @@
           <p class="text-balance">{{player.balance}}</p>
         </div>
       </div>
-      <div *ngIf="!player.empty && player.isSelected">
+      <div *ngIf="!player.empty && player.isSelected && player.isActive">
         <div>
           <img [src]="playersBlock.b_Name_selected.srcNone" [class]="playersBlock.b_Name_selected.cssClass"
                (mouseover)="playersBlock.b_Name_selected.onOver($event)"
@@ -55,6 +55,20 @@
         </div>
         <div>
           <img src="../../../assets/img/panel_balance_selected.png" class="panel-balance-img">
+          <p class="text-balance">{{player.balance}}</p>
+        </div>
+      </div>
+      <div *ngIf="!player.empty && !player.isActive">
+        <div>
+          <img [src]="playersBlock.b_Name_blocked.srcNone" [class]="playersBlock.b_Name_blocked.cssClass"
+               (mouseover)="playersBlock.b_Name_blocked.onOver($event)"
+               (mousedown)="playersBlock.b_Name_blocked.onDown($event)"
+               (mouseleave)="playersBlock.b_Name_blocked.onOut($event)"
+               (mouseup)="playersBlock.b_Name_blocked.onUp($event, player)">
+          <p class="text-over-btn">{{player.name}}</p>
+        </div>
+        <div>
+          <img src="../../../assets/img/panel_balance_blocked.png" class="panel-balance-img">
           <p class="text-balance">{{player.balance}}</p>
         </div>
       </div>
